# ABModelFunction

./: README.md  pyproject.toml  setup.py
abmodel/: abmodel.pyx  abmodeldecl.pxd  abmodelfun.c  abmodelfun.h
tests/: test_abmodel.py
